external-crates/move/crates/move-cli/tests/build_tests/build_with_warnings/args.exp
Command `build`:
BUILDING Test
warning[W09002]: unused variable
  ┌─ ./sources/m.move:2:16
  │
2 │ public fun foo(x: u64): u64 {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

Command `disassemble --package Test --name m`:
// Move bytecode v7
module 42.m {




public foo(x#0#0: u64): u64 {
B0:
	0: LdU64(2)
	1: Ret

}
}
warning[W09002]: unused variable
  ┌─ ./sources/m.move:2:16
  │
2 │ public fun foo(x: u64): u64 {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

Command `build --silence-warnings`:
BUILDING Test
Command `build --silence-warnings --warnings-are-errors`:
BUILDING Test
Command `build --warnings-are-errors`:
BUILDING Test
error[E09002]: unused variable
  ┌─ ./sources/m.move:2:16
  │
2 │ public fun foo(x: u64): u64 {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

